<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_SystemHMIVariable" Id="{27cc9755-a6c5-0133-1ca0-aacae675563e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	(*	Domyślne przyciski menu głównego - Logika	*)
	fbMMB0_MainScreen			: FB_HMIEButton;
	fbMMB1_Recipe				: FB_HMIEButton;
	fbMMB2_Parameters			: FB_HMIEButton;
	fbMMB3_Events				: FB_HMIEButton;
	fbMMB4_ModeChange			: FB_HMIEButton;
	fbMMB5_Statistics			: FB_HMIEButton;
	fbMMB6_StateDiagram			: FB_HMIEButton;
	fbMMB7_Settings				: FB_HMIEButton;
	(*	Menu główne - Logika	*)
	fbMainMenu					: FB_HMIEMenu;
	(*	Domyślne przyciski menu głównego - łączniki	*)
	fbMMB0_MainScreen_HMI_Connector		: FB_HMIEButton_HMI (itfButton := fbMMB0_MainScreen);
	fbMMB1_Recipe_HMI_Connector			: FB_HMIEButton_HMI (itfButton := fbMMB1_Recipe);
	fbMMB2_Parameters_HMI_Connector		: FB_HMIEButton_HMI (itfButton := fbMMB2_Parameters);
	fbMMB3_Events_HMI_Connector			: FB_HMIEButton_HMI (itfButton := fbMMB3_Events);
	fbMMB4_ModeChange_HMI_Connector		: FB_HMIEButton_HMI (itfButton := fbMMB4_ModeChange);
	fbMMB5_Statistics_HMI_Connector		: FB_HMIEButton_HMI (itfButton := fbMMB5_Statistics);
	fbMMB6_StateDiagram_HMI_Connector	: FB_HMIEButton_HMI (itfButton := fbMMB6_StateDiagram);
	fbMMB7_Settings_HMI_Connector		: FB_HMIEButton_HMI (itfButton := fbMMB7_Settings);
	(*	Menu główne - Łącznik	*)
	fbMainMenu_HMI_Connector			: FB_HMIEMenu_HMI (itfMenu := fbMainMenu);
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>